# flipit

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  SECURITY  THANKS  acinclude.m4  aclocal.m4  autogen.sh  bootstrap  cm17a.c  cm17a.h  cm17a_proto.txt  conf.c  conf.h  config.h.in  configure  configure.ac  configure.in  flipit.1  flipit.c  flipit.conf  flipit.html  flipit.pod.in  missing  mkinstalldirs  solaris.txt
